package gof.BridgeRichard.Codigo;

public interface ControleRemoto {
    
    void Ligar();

    void volumeParaCima();

    void volumeParaBaixo();

    void canalParaCima();

    void canalParaBaixo();
}
